[project]
name =  "decimatime"
authors = [
    {name = "Matthew Gill", email = ""},
]
description = ""
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    'roman==4.1'
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]