[tool.poetry]
name = "decimaltime"
version = "0.1.0"
description = ""
authors = ["Matthew Gill"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
roman = "^4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytz = "^2023.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]